--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "^14.2.24",
+    "openai": "^4.86.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20",
+    "@types/node": "^20.17.23",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.161.2",
