refactor: update branding and enhance molecule information display
- Changed application name from Sci-Viz AI to Moleculens across various components.
- Updated metadata and landing page to reflect new branding.
- Enhanced MoleculeViewer to display additional information for macromolecules, including resolution, experimental method, and publication details.
- Adjusted storage key for history to align with new branding.
- Improved the extraction of RCSB metadata to include more detailed molecule information.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "SciVizAI",
-  "short_name": "SciVizAI",
-  "description": "Interactive Scientific Visualization Platform for Chemistry Learning",
+  "name": "Moleculens",
+  "short_name": "Moleculens",
+  "description": "Interactive Molecular Visualization Platform for Chemistry Learning",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
