--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "0.160.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "three-sdf-loader": "^0.2.6",
+    "sdf-parser": "^7.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
