--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
-    "next": "15.3.2",
+    "next": "^15.4.4",
     "openai": "^4.86.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
+    "sdf-parser": "^7.0.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "0.160.0",
-    "zod": "^3.24.2",
-    "three-sdf-loader": "^0.2.6",
-    "sdf-parser": "^7.0.4"
+    "three-sdf-loader": "^0.3.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -45,7 +45,7 @@
     "@typescript-eslint/parser": "^6.19.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.4.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
