chore: remove ferrocene documentation and update molecule viewer with new features
- Deleted the ferrocene.md file as it contained no records.
- Updated output.html to improve structure and styling, including new CSS variables and enhanced button styles.
- Refactored molecule data handling in the application, ensuring proper async handling in the generate-molecule-html route.
- Added new dependencies for browser tools to enhance development capabilities.
- Improved logging and error handling across various components to facilitate better debugging and traceability.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "mcp": "npx @agentdeskai/browser-tools-mcp@latest",
+    "bt:server": "npx @agentdeskai/browser-tools-server@latest"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -36,6 +38,8 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@agentdeskai/browser-tools-mcp": "^1.2.1",
+    "@agentdeskai/browser-tools-server": "^1.2.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.17.23",
     "@types/react": "^19",
