--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
     "@react-three/drei": "10.0.8",
     "@react-three/fiber": "9.1.2",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.477.0",
     "next": "^15.4.4",
     "openai": "^4.86.2",
+    "openchemlib": "^9.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
