--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "mcp": "npx @agentdeskai/browser-tools-mcp@latest",
-    "bt:server": "npx @agentdeskai/browser-tools-server@latest"
+    "bt:server": "npx @agentdeskai/browser-tools-server@latest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -56,6 +57,6 @@
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
