--- a/package.json
+++ b/package.json
@@ -1,14 +1,62 @@
 {
   "name": "moleculens",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.1",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
   "scripts": {
-    "dev:web": "pnpm --filter @moleculens/web dev",
-    "build:web": "pnpm --filter @moleculens/web build",
-    "lint": "echo ok"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "mcp": "npx @agentdeskai/browser-tools-mcp@latest",
+    "bt:server": "npx @agentdeskai/browser-tools-server@latest",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^4.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@rdkit/rdkit": "^2025.3.4-1.0.0",
+    "@react-three/drei": "10.0.8",
+    "@react-three/fiber": "9.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
+    "next": "^15.4.4",
+    "openai": "^4.86.2",
+    "openchemlib": "^9.6.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.54.2",
+    "sdf-parser": "^7.0.4",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "0.160.0",
+    "three-sdf-loader": "^0.3.5",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@agentdeskai/browser-tools-mcp": "^1.2.1",
+    "@agentdeskai/browser-tools-server": "^1.2.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.17.23",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/three": "^0.161.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "15.4.4",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3"
   }
 }
